@@ -172,3 +172,5 @@ ok *seleccion de linea familia actual y maquina actual al abrir el menu segun ma
 ok-Lectura teclas en input menú de manera rápida
 
 -Revisar teclado chloe al escribir rapido, quiza hacer mismas correcciones que en QL y en cambios de edicion de texto desde zxvision
+
+-ayuda en menu items de storage QL
